--- a/Implementation_01.ipynb
+++ b/Implementation_01.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNzOturSQ/MPnmBqU9wNQOA",
+      "authorship_tag": "ABX9TyOADEAsCLV3TKT3OtCzsp99",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,75 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "import os\n",
+        "\n",
+        "!mkdir -p ~/.kaggle\n",
+        "!mv kaggle.json ~/.kaggle/\n",
+        "!chmod 600 ~/.kaggle/kaggle.json"
+      ],
       "metadata": {
-        "id": "spsHri_MNLX6"
+        "id": "v1g_Gs0lczju",
+        "outputId": "4a92514c-c3f8-4c68-e244-9a9912cc0586",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "mv: cannot stat 'kaggle.json': No such file or directory\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!kaggle datasets download -d vihangahwijesinghe/sri-lankan-ayurvedic-plants -p /content"
+      ],
+      "metadata": {
+        "id": "qPsmRceQdQcw",
+        "outputId": "7c105351-04b3-48bf-ea67-57b4b0e50f63",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dataset URL: https://www.kaggle.com/datasets/vihangahwijesinghe/sri-lankan-ayurvedic-plants\n",
+            "License(s): apache-2.0\n",
+            "sri-lankan-ayurvedic-plants.zip: Skipping, found more recently modified local copy (use --force to force download)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!unzip -q \"/content/sri-lankan-ayurvedic-plants.zip\" -d /content/ayurvedic_dataset"
+      ],
+      "metadata": {
+        "id": "8yLi2RArdVqx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "vEGzwQQsd21Y"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
