Implement baseline CNN architecture with device, loss, and optimizer setup

--- a/Implementation_01.ipynb
+++ b/Implementation_01.ipynb
@@ -371,10 +371,10 @@
       ],
       "metadata": {
         "id": "Bpd28S_EhUlg",
-        "outputId": "dbb1f2a6-6776-465a-aeb9-ebcb12afc722",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "dbb1f2a6-6776-465a-aeb9-ebcb12afc722"
       },
       "execution_count": 27,
       "outputs": [
@@ -698,11 +698,11 @@
         "print(\"Label batch shape:\", labels.shape)"
       ],
       "metadata": {
-        "id": "KyMx6Sovx8cO",
-        "outputId": "eeb61ae7-2a1b-4da2-b3de-ea24bdc74cad",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KyMx6Sovx8cO",
+        "outputId": "eeb61ae7-2a1b-4da2-b3de-ea24bdc74cad"
       },
       "execution_count": 49,
       "outputs": [
@@ -783,11 +783,11 @@
         "print(model)"
       ],
       "metadata": {
-        "id": "g4U96Llow1xa",
-        "outputId": "b8eb4860-2def-48ce-dd5d-426f422dd68a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "g4U96Llow1xa",
+        "outputId": "b8eb4860-2def-48ce-dd5d-426f422dd68a"
       },
       "execution_count": 52,
       "outputs": [
@@ -817,11 +817,11 @@
         "print(\"Using device:\", device)"
       ],
       "metadata": {
-        "id": "5ZEEEjBSw4x5",
-        "outputId": "965fac11-954d-494e-b4c3-04854d53ffc2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5ZEEEjBSw4x5",
+        "outputId": "965fac11-954d-494e-b4c3-04854d53ffc2"
       },
       "execution_count": 53,
       "outputs": [
@@ -851,7 +851,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Step 6 — Verify Data Shapes (Optional but Recommended)\n",
+        "#Step 6 — Verify Data Shapes\n",
         "\n",
         "images, labels = next(iter(train_loader))\n",
         "images = images.to(device)\n",
@@ -861,11 +861,11 @@
         "print(\"Label batch shape:\", labels.shape)   # [batch_size]"
       ],
       "metadata": {
-        "id": "JysJoI5bxCwA",
-        "outputId": "9f2912d9-2e92-4711-ec3a-38adfb0ef957",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JysJoI5bxCwA",
+        "outputId": "9f2912d9-2e92-4711-ec3a-38adfb0ef957"
       },
       "execution_count": 55,
       "outputs": [
